--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <title>My blog</title>
     <link  href="css/master.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -13,12 +17,29 @@
     <link rel="shortcut icon"
     href="IMG_20200918_214625_653.ico" type="image/x-icon">
   </head>
-  <body>
+  <body class="overflow-hidden">
     <!-- header start -->
         <header>
-            <p>Stanislav Fedenev
+          <div class="me">
+            <p>STANISLAV FEDENEV
             <br>automation engineer</p>
-            <nav class="navigation">
+          </div>
+            <input class="switcher" type="checkbox" id = "menu">
+            <label class="open" for="menu">
+              <i class="fa fa-bars"></i>
+            </label>
+            <nav>
+              <ul>
+                <li> <a class="nav" href="My_Main_Skills.html">My Main Skills</a> </li>
+                <li> <a class="nav" href="My_Education.html">My Education</a> </li>
+                <li> <a class="nav" href="#contact">Contact Me</a> </li>
+                <li> <a class="nav" href="#Follow_Me">Follow Me</a> </li>
+              </ul>
+              <label class="close" for="menu">
+                <i class="fa fa-times"></i>
+              </label>
+            </nav>
+            <!-- <nav class="navigation">
               <table>
                 <tr>
                   <td><a href="My_Main_Skills.html"><div class="nav_btn">My Main Skills</div></a></td>
@@ -27,7 +48,7 @@
                   <td><a href="#Follow_Me"><div class="nav_btn">Follow Me</div></a></td>
                 </tr>
               </table>
-            </nav>
+            </nav> -->
         </header>
     <!-- header end -->
     <main>
